[project]
name = "streamlit-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highcharts-core>=1.10.3",
    "matplotlib>=3.10.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.0",
    "streamlit-highcharts>=0.2.0",
]
